# src/__generated__/routes/routes.ts
@@ -51,15 +51,29 @@ const models: TsoaRoute.Models = {
         "type": {"dataType":"nestedObjectLiteral","nestedProperties":{"errors":{"dataType":"union","subSchemas":[{"ref":"Record_string.string-or-string-Array_"},{"dataType":"array","array":{"dataType":"refObject","ref":"Error"}}]},"message":{"dataType":"string"},"data":{"dataType":"void"},"success":{"dataType":"boolean","required":true}},"validators":{}},
     },
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-    "AddOrUpdateUserRequest": {
+    "EOAUserUpsertRequest": {
         "dataType": "refObject",
         "properties": {
-            "display_name": {"dataType":"string","required":true},
-            "avatar": {"dataType":"string","required":true},
-            "signature": {"dataType":"string","required":true},
             "chain_id": {"dataType":"double","required":true},
+            "display_name": {"dataType":"string"},
+            "avatar": {"dataType":"string"},
+            "signature": {"dataType":"string","required":true},
         },
         "additionalProperties": false,
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "MultisigUserUpsertRequest": {
+        "dataType": "refObject",
+        "properties": {
+            "chain_id": {"dataType":"double","required":true},
+            "messageHash": {"dataType":"string","required":true},
+        },
+        "additionalProperties": false,
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "AddOrUpdateUserRequest": {
+        "dataType": "refAlias",
+        "type": {"dataType":"union","subSchemas":[{"ref":"EOAUserUpsertRequest"},{"ref":"MultisigUserUpsertRequest"}],"validators":{}},
     },
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
     "ApiResponse__cid-string__": {
