# src/__generated__/swagger.json
@@ -116,9 +116,12 @@
 				"type": "object",
 				"description": "Interface for a generic API response."
 			},
-			"AddOrUpdateUserRequest": {
-				"description": "Interface for a user add or update request.",
+			"EOAUserUpsertRequest": {
 				"properties": {
+					"chain_id": {
+						"type": "number",
+						"format": "double"
+					},
 					"display_name": {
 						"type": "string"
 					},
@@ -127,20 +130,41 @@
 					},
 					"signature": {
 						"type": "string"
-					},
-					"chain_id": {
-						"type": "number",
-						"format": "double"
 					}
 				},
 				"required": [
-					"display_name",
-					"avatar",
-					"signature",
-					"chain_id"
+					"chain_id",
+					"signature"
 				],
 				"type": "object",
 				"additionalProperties": false
+			},
+			"MultisigUserUpsertRequest": {
+				"properties": {
+					"chain_id": {
+						"type": "number",
+						"format": "double"
+					},
+					"messageHash": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"chain_id",
+					"messageHash"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"AddOrUpdateUserRequest": {
+				"anyOf": [
+					{
+						"$ref": "#/components/schemas/EOAUserUpsertRequest"
+					},
+					{
+						"$ref": "#/components/schemas/MultisigUserUpsertRequest"
+					}
+				]
 			},
 			"ApiResponse__cid-string__": {
 				"properties": {
@@ -1133,6 +1157,22 @@
 						"application/json": {
 							"schema": {
 								"$ref": "#/components/schemas/AddOrUpdateUserRequest"
+							},
+							"examples": {
+								"Example 1": {
+									"value": {
+										"chain_id": 11155111,
+										"display_name": "Dana's Profile",
+										"avatar": "https://example.com/avatar.png",
+										"signature": "0x1234567890abcdef"
+									}
+								},
+								"Example 2": {
+									"value": {
+										"chain_id": 11155111,
+										"messageHash": "0x1234567890abcdef"
+									}
+								}
 							}
 						}
 					}
