# src/types/api.ts
@@ -77,12 +77,23 @@ export type ValidationResponse = ApiResponse<ValidationResult>;
  * Interface for a user add or update request.
  */
 
-export interface AddOrUpdateUserRequest {
-  display_name: string;
-  avatar: string;
-  signature: string;
+interface BaseUserUpsertRequest {
   chain_id: number;
 }
+
+interface EOAUserUpsertRequest extends BaseUserUpsertRequest {
+  display_name?: string;
+  avatar?: string;
+  signature: string;
+}
+
+interface MultisigUserUpsertRequest extends BaseUserUpsertRequest {
+  messageHash: string;
+}
+
+export type AddOrUpdateUserRequest =
+  | EOAUserUpsertRequest
+  | MultisigUserUpsertRequest;
 
 export type AddOrUpdateUserResponse = ApiResponse<{ address: string } | null>;
 
